 + A Space Adventure shows 2 flowers over fully completed planets (with side missions)
 + Capture The Flag supports setting number of captures with script parameter “capture=<number>”
 + Show correct ranking and times in stats screen of Racer and TechRacer
 + Allow to only place 2 waypoints in Racer
 + New script parameter “waypointradius=<number>” for Racer set the size of waypoints
 * Fixed waypoint message in TechRacer and Racer overwriting current weapon selection message
 * Fixed TechRacer not recording finish if time was >= 100s
 * Mutant script shows now appropriate ranking and graph in stats screen
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Fixed Lua error message in A Classic Fairytale mission 8
 * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission
 * Fixed Capture the Flag error: Flag of first team spawned at second hog instead of first
 * Disable Sudden Death for good in Shoppa game scheme

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access
 + Additional button for just randomizing theme that will not change your selected map
 + Randomizing map/theme in online-mode will not include DLC-content
 * Campaign screen does no longer show AI-controlled teams
 * Campaign names and campaign mission names can now be translated
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default
